Страница формы активна, ссылка дезактивирована

--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
               <a href="catalog.html">Каталог товаров</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Вязание на заказ</a>
+              <a>Вязание на заказ</a>
             </li>
             <li class="site-list__item">
               <form class="main-nav__search" action="https://echo.htmlacademy.ru" method="post">
