--- a/source/index.html
+++ b/source/index.html
@@ -6,10 +6,11 @@
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
-      </a>
+
       <nav class="main-nav">
+        <a class="main-nav__logo">
+          <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
+        </a>
         <button class="main-nav__toggle visually-hidden" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
@@ -19,7 +20,7 @@
             <li class="site-list__item">
               <a href="form.html">Вязание на заказ</a>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--search">
               <form class="main-nav__search" action="https://echo.htmlacademy.ru" method="post">
                 <label>Поиск по сайту
                   <input type="text" name="search">
@@ -27,7 +28,7 @@
                 <button type="submit"></button>
             </form>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--cart">
               <a href="#">Корзина: пока пуста</a>
             </li>
           </ul>
@@ -39,21 +40,19 @@
       <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
 
       <section class="catalog">
-        <h2 class="catalog__title visually-hidden">Каталог товаров</h2>
-        <section class="catalog-interior">
-          <div class="catalog-interior__wrapper">
-            <a class="catalog-interior__link" href="#">
-              <h2 class="catalog-interior__title">Предметы интерьера</h2>
+        <h2 class="visually-hidden">Каталог товаров</h2>
+        <ul class="catalog-list">
+          <li class="catalog-list__item catalog-list__item--interior">
+            <a class="catalog-list__link" href="#">
+              <h3 class="catalog-list__title">Предметы интерьера</h3>
             </a>
-          </div>
-        </section>
-        <section class="catalog-toys">
-          <div class="catalog-toys__wrapper">
-            <a class="catalog-toys__link" href="#">
-              <h2 class="catalog-toys__title">Детские игрушки</h2>
+          </li>
+          <li class="catalog-list__item catalog-list__item--toys">
+            <a class="catalog-list__link" href="#">
+              <h3 class="catalog-list__title">Детские игрушки</h3>
             </a>
-          </div>
-        </section>
+          </li>
+        </ul>
       </section>
 
       <section class="promo">
