Добавлены классы в промо

--- a/source/index.html
+++ b/source/index.html
@@ -57,23 +57,23 @@
 
       <section class="promo">
         <div class="promo__wrapper">
-          <h2 class="promo__title">Вязаные корзинки</h2>
-          <p class="promo_description">
+          <h2 class="promo__title ">Вязаные корзинки</h2>
+          <p class="promo__description">
             Экологически чистая пряжа, ручная работа.
             Доступны в шести расцветках и трёх размерах.
           </p>
-          <table class="promo__specification">
-            <tr>
-              <td>Цвет:</td>
-              <td>"Тиффани"/серый</td>
+          <table class="promo__specif specif-list">
+            <tr class="specif-list__item">
+              <td class="specif-list__item--name">Цвет:</td>
+              <td class="specif-list__item--value">"Тиффани"/серый</td>
             </tr>
-            <tr>
-              <td>Диаметр:</td>
-              <td>25 см</td>
+            <tr class="specif-list__item">
+              <td class="specif-list__item--name">Диаметр:</td>
+              <td class="specif-list__item--value">25 см</td>
             </tr>
-            <tr>
-              <td>Высота:</td>
-              <td>15 см</td>
+            <tr class="specif-list__item">
+              <td class="specif-list__item--name">Высота:</td>
+              <td class="specif-list__item--value">15 см</td>
             </tr>
           </table>
           <img class="promo__image" src="img/triple-set.png" width="260" height="315" alt="Набор вязаных корзинок">
