Добавлен спан в промо

--- a/source/index.html
+++ b/source/index.html
@@ -57,6 +57,7 @@
 
       <section class="promo">
         <div class="promo__wrapper">
+          <span class="promo__week">Товар недели</span>
           <h2 class="promo__title ">Вязаные корзинки</h2>
           <p class="promo__description">
             Экологически чистая пряжа, ручная работа.
