--- a/source/index.html
+++ b/source/index.html
@@ -41,15 +41,15 @@
 
       <section class="catalog">
         <h2 class="visually-hidden">Каталог товаров</h2>
-        <ul class="catalog-list">
-          <li class="catalog-list__item catalog-list__item--interior">
-            <a class="catalog-list__link" href="#">
-              <h3 class="catalog-list__title">Предметы интерьера</h3>
+        <ul class="catalog-main">
+          <li class="catalog-main__item catalog-main__item--interior">
+            <a class="catalog-main__link" href="#">
+              <h3 class="catalog-main__title">Предметы интерьера</h3>
             </a>
           </li>
-          <li class="catalog-list__item catalog-list__item--toys">
-            <a class="catalog-list__link" href="#">
-              <h3 class="catalog-list__title">Детские игрушки</h3>
+          <li class="catalog-main__item catalog-main__item--toys">
+            <a class="catalog-main__link" href="#">
+              <h3 class="catalog-main__title">Детские игрушки</h3>
             </a>
           </li>
         </ul>
