--- a/source/index.html
+++ b/source/index.html
@@ -6,13 +6,12 @@
   </head>
   <body>
     <header class="page-header">
-
       <nav class="main-nav">
         <a class="main-nav__logo">
           <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
         </a>
         <button class="main-nav__toggle visually-hidden" type="button">Открыть меню</button>
-        <div class="main-nav__wrapper">
+        <div class="wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a href="catalog.html">Каталог товаров</a>
@@ -40,23 +39,25 @@
       <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
 
       <section class="catalog">
-        <h2 class="visually-hidden">Каталог товаров</h2>
-        <ul class="catalog-main">
-          <li class="catalog-main__item catalog-main__item--interior">
-            <a class="catalog-main__link" href="#">
-              <h3 class="catalog-main__title">Предметы интерьера</h3>
-            </a>
-          </li>
-          <li class="catalog-main__item catalog-main__item--toys">
-            <a class="catalog-main__link" href="#">
-              <h3 class="catalog-main__title">Детские игрушки</h3>
-            </a>
-          </li>
-        </ul>
+        <div class="wrapper">
+          <h2 class="visually-hidden">Каталог товаров</h2>
+          <ul class="catalog-main">
+            <li class="catalog-main__item catalog-main__item--interior">
+              <a class="catalog-main__link" href="#">
+                <h3 class="catalog-main__title">Предметы интерьера</h3>
+              </a>
+            </li>
+            <li class="catalog-main__item catalog-main__item--toys">
+              <a class="catalog-main__link" href="#">
+                <h3 class="catalog-main__title">Детские игрушки</h3>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="promo">
-        <div class="promo__wrapper">
+        <div class="wrapper">
           <span class="promo__week">Товар недели</span>
           <h2 class="promo__title ">Вязаные корзинки</h2>
           <p class="promo__description">
@@ -84,7 +85,7 @@
       </section>
 
       <section class="advantages">
-        <div class="advantages__wrapper">
+        <div class="wrapper">
           <h2 class="advantages__title">Коротко о нас:</h2>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--ecology">
@@ -110,7 +111,7 @@
       </section>
 
       <secton class="reviews">
-        <div class="reviews__wrapper">
+        <div class="wrapper">
           <h2 class="reviews__title">Отзывы</h2>
             <div class="reviews__list">
               <blockquote class="reviews__item">
@@ -129,7 +130,7 @@
       </secton>
 
       <section class="contacts">
-        <div class="contacts__wrapper">
+        <div class="wrapper">
           <h2 class="contacts__title">Контакты</h2>
           <p class="contacts__text">e-mail:
             <a class="contacts__mail" href="#">info@mimimishkashop.ru</a>
@@ -152,7 +153,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="wrapper">
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
