--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header class="page-header">
+
       <nav class="main-nav">
         <a class="main-nav__logo">
           <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
@@ -59,7 +60,7 @@
       <section class="promo">
         <div class="wrapper">
           <span class="promo__week">Товар недели</span>
-          <h2 class="promo__title ">Вязаные корзинки</h2>
+          <h2 class="title-main title-main--promo">Вязаные корзинки</h2>
           <p class="promo__description">
             Экологически чистая пряжа, ручная работа.
             Доступны в шести расцветках и трёх размерах.
@@ -86,7 +87,7 @@
 
       <section class="advantages">
         <div class="wrapper">
-          <h2 class="advantages__title">Коротко о нас:</h2>
+          <h2 class="title-main title-main--advantages">Коротко о нас:</h2>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--ecology">
               <p>Экологически чистые материалы</p>
@@ -112,7 +113,7 @@
 
       <secton class="reviews">
         <div class="wrapper">
-          <h2 class="reviews__title">Отзывы</h2>
+          <h2 class="title-main title-main--reviews">Отзывы</h2>
             <div class="reviews__list">
               <blockquote class="reviews__item">
                 <p class="reviews__description">
@@ -132,16 +133,22 @@
       <section class="contacts">
         <div class="wrapper">
           <h2 class="contacts__title">Контакты</h2>
-          <p class="contacts__text">e-mail:
-            <a class="contacts__mail" href="#">info@mimimishkashop.ru</a>
-          </p>
-          <p class="contacts__text">адрес:
-            <p class="contacts__adress">
-              г. Санкт-Петербург,
-              ул. Большая Конюшенная,
-              д. 19/8, офис 101
-            </p>
-          </p>
+            <table class="contacts__data">
+              <tr>
+                <td class="contacts__text">e-mail:</td>
+                <td class="contacts__mail">
+                  <a href="#">info@mimimishkashop.ru</a>
+                </td>
+              </tr>
+              <tr>
+                <td class="contacts__text">адрес:</td>
+                <td class="contacts__address">
+                  г. Санкт-Петербург,
+                  ул. Большая Конюшенная,
+                  д. 19/8, офис 101
+                </td>
+              </tr>
+            </table>
           <figure>
             <figcaption class="contacts__map visually-hidden">Месторасположение нашего офиса на карте</figcaption>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6193253031113!2d30.32110961617598!3d59.938458669075104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2sBolshaya%20Konyushennaya%20St%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1585331824990!5m2!1sit!2sit"
