Добавлен раздел Процесс производста

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -82,12 +82,21 @@
       </section>
 
       <section class="process">
-        <!--бонусное задание)-->
+        <div class="wrapper">
+          <h3 class="process__title">Процесс производства</h3>
+          <video class="process__video" width="260" height="150" poster="img/video.svg">
+            <source src="#">
+          </video>
+          <p class="process__description">
+            По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
+          </p>
+          <a class="process__link button" href="form.html">Сделать заказ</a>
+        </div>
       </section>
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="wrapper">
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
