--- a/source/index.html
+++ b/source/index.html
@@ -133,22 +133,15 @@
       <section class="contacts">
         <div class="wrapper">
           <h2 class="contacts__title">Контакты</h2>
-            <table class="contacts__data">
-              <tr>
-                <td class="contacts__text">e-mail:</td>
-                <td class="contacts__mail">
-                  <a href="#">info@mimimishkashop.ru</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="contacts__text">адрес:</td>
-                <td class="contacts__address">
-                  г. Санкт-Петербург,
-                  ул. Большая Конюшенная,
-                  д. 19/8, офис 101
-                </td>
-              </tr>
-            </table>
+          <p class="contacts__info">
+            <span>e-mail:</span>
+            <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+          </p>
+          <adress class="contacts__info">
+            <span>адрес:</span>
+            <span>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</span>
+          </adress>
+
           <figure>
             <figcaption class="contacts__map visually-hidden">Месторасположение нашего офиса на карте</figcaption>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6193253031113!2d30.32110961617598!3d59.938458669075104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2sBolshaya%20Konyushennaya%20St%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1585331824990!5m2!1sit!2sit"
