--- a/source/form.html
+++ b/source/form.html
@@ -47,57 +47,77 @@
 
           <form class="order__form" action="https://echo.htmlacademy.ru" method="post">
             <fieldset class="order__set">
-              <legend>Тип</legend>
-              <label>
+              <legend class="order__name">Тип</legend>
+              <label class="order__sign">
                 <input type="radio" name="radio-input" checked>
                 <span class="radio-box"></span>
               Аксессуар для интерьера</label>
-              <label>
+              <label class="order__sign">
                 <input type="radio" name="radio-input">
                 <span class="radio-box"></span>
               Детская игрушка</label>
             </fieldset>
 
             <fieldset class="order__set">
-              <legend>Цвет</legend>
-              <label>
+              <legend class="order__name">Цвет</legend>
+              <label class="order__sign">
                 <input type="checkbox" name="check-input" checked>
                 <span class="check-box"></span>
               Белый</label>
-              <label>
+              <label class="order__sign">
                 <input type="checkbox" name="check-input" checked>
                 <span class="check-box"></span>
               Серый</label>
-              <label>
+              <label class="order__sign">
                 <input type="checkbox" name="check-input">
                 <span class="check-box"></span>
               "Тиффани"</label>
-              <label>
+              <label class="order__sign">
                 <input type="checkbox" name="check-input">
                 <span class="check-box"></span>
               Чёрный</label>
-              <label>
+              <label class="order__sign">
                 <input type="checkbox" name="check-input">
                 <span class="check-box"></span>
               Розовый</label>
-              <label>
+              <label class="order__sign">
                 <input type="checkbox" name="check-input">
                 <span class="check-box"></span>
               Оранжевый</label>
             </fieldset>
 
             <fieldset class="order__set">
-              <legend>ФИО</legend>
+              <legend class="order__name">ФИО</legend>
+              <label class="order__sign">Имя:
+                <input type="text" name="first-name" placeholder="Введите ваше имя*" required>
+              </label>
+              <label class="order__sign">Фамилия:
+                <input type="text" name="last-name" placeholder="Укажите фамилию*" required>
+              </label>
+              <label class="order__sign">Отчество:
+                <input type="text" name="patronymic" placeholder="Отчество, если желаете">
+              </label>
             </fieldset>
-            <fieldset class="">
-              <legend>Тел</legend>
+
+            <fieldset class="order__set">
+              <legend class="order__name">Тел</legend>
+              <label>
+                <input class="order__input order__input--tel" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+              </label>
             </fieldset>
-            <fieldset class="">
-              <legend>E-mail</legend>
+
+            <fieldset class="order__set">
+              <legend class="order__name">E-mail</legend>
+              <label>
+                <input class="order__input order__input--mail" type="email" name="mail" placeholder="Ваш Email*" required>
+              </label>
             </fieldset>
-            <fieldset class="">
-              <legend>Доп</legend>
+
+            <fieldset class="order__set">
+              <legend class="order__name">Доп</legend>
+              <textarea name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </fieldset>
+
             <span class="">*Поля обязательны для заполнения</span>
             <button class="" type="submit">Отправить заказ</button>
           </form>
