--- a/source/catalog.html
+++ b/source/catalog.html
@@ -84,9 +84,12 @@
       <section class="process">
         <div class="wrapper">
           <h3 class="process__title">Процесс производства</h3>
-          <video class="process__video" width="260" height="150" poster="img/video.svg">
-            <source src="#">
-          </video>
+          <div class="process__video">
+            <video class="" width="260" height="150" poster="img/video.svg" controls>
+              <source src="#">
+            </video>
+            <button class="process__button visually-hidden" type="button">Воспроизвести</button>
+          </div>
           <p class="process__description">
             По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
           </p>
