--- a/source/catalog.html
+++ b/source/catalog.html
@@ -44,7 +44,7 @@
         <ul class="catalog-inner__list catalog-list">
           <li class="catalog-list__item">
             <a class="catalog-list__link" href="#">
-              <img class="catalog-list__image" src="img/foto-1.png" width="260" height="195" alt="игрушка 'Вязаный зайчик'">
+              <img class="catalog-list__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="игрушка 'Вязаный зайчик'">
               <h3 class="catalog-list__name">Зайчик-попрыгайчик</h3>
             </a>
             <span class="catalog-list__description">Рост 30 см, вес 200 г</span>
@@ -54,7 +54,7 @@
 
           <li class="catalog-list__item">
             <a class="catalog-list__link" href="#">
-              <img class="catalog-list__image" src="img/foto-2.png" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
+              <img class="catalog-list__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
               <h3 class="catalog-list__name">Корзинка для белья</h3>
             </a>
             <span class="catalog-list__description">Диаметр 15 см, высота 10 см</span>
@@ -64,7 +64,7 @@
 
           <li class="catalog-list__item">
             <a class="catalog-list__link" href="#">
-              <img class="catalog-list__image" src="img/foto-3.png" width="260" height="195" alt="большая вязаная двухцветная корзинка для игрушек">
+              <img class="catalog-list__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="большая вязаная двухцветная корзинка для игрушек">
               <h3 class="catalog-list__name">Большая корзинка для игрушек</h3>
             </a>
             <span class="catalog-list__description">Диаметр 30 см, высота 30см</span>
