Внесены изменения index

--- a/source/index.html
+++ b/source/index.html
@@ -78,7 +78,7 @@
               <td class="specif-list__item--value">15 см</td>
             </tr>
           </table>
-          <img class="promo__image" src="img/triple-set.png" width="260" height="315" alt="Набор вязаных корзинок">
+          <img class="promo__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Набор вязаных корзинок">
           <span class="promo__price">Цена: 990 руб.</span>
           <button class="promo__order" type="button">Заказать</button>
         </div>
