Добавление файлов в sass

--- a/source/form.html
+++ b/source/form.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="page-header">
-
+    <header class="page-header feedback">
       <nav class="main-nav">
         <a class="main-nav__logo" href="index.html">
           <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
@@ -124,7 +123,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer feedback">
       <div class="wrapper">
         <div class="page-footer__social social">
           <ul class="social__list">
