--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="page-header">
-
+    <header class="page-header feedback">
       <nav class="main-nav">
         <a class="main-nav__logo">
           <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
@@ -35,7 +34,7 @@
       </nav>
     </header>
 
-    <main class="page-main">
+    <main class="page-main feedback">
       <h1 class="page-main__title">Милые штуки ручной работы для дома</h1>
 
       <section class="catalog">
@@ -151,7 +150,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer feedback">
       <div class="wrapper">
         <div class="page-footer__social social">
           <ul class="social__list">
