--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
         <a class="main-nav__logo">
           <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
         </a>
-        <button class="main-nav__toggle visually-hidden" type="button">Открыть меню</button>
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a href="catalog.html">Каталог товаров</a>
