--- a/source/form.html
+++ b/source/form.html
@@ -14,21 +14,21 @@
         <button class="main-nav__toggle visually-hidden" type="button">Открыть меню</button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a href="catalog.html">Каталог товаров</a>
+            <a class="site-list__link" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="site-list__item">
-            <a>Вязание на заказ</a>
+            <a class="site-list__link" href="form.html">Вязание на заказ</a>
           </li>
           <li class="site-list__item site-list__item--search">
-            <form class="main-nav__search" action="https://echo.htmlacademy.ru" method="post">
-              <label>Поиск по сайту
+            <form class="site-list__item" action="https://echo.htmlacademy.ru" method="post">
+              <label class="site-list__link">Поиск по сайту
                 <input type="text" name="search">
               </label>
               <button type="submit"></button>
-          </form>
+            </form>
           </li>
-          <li class="site-list__item site-list__item--cart">
-            <a href="#">Корзина: пока пуста</a>
+          <li class="user-list__item user-list__item--cart">
+            <a class="user-list__link" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
       </nav>
