--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,28 +14,23 @@
         <button class="main-nav__toggle visually-hidden" type="button">Открыть меню</button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог товаров</a>
+            <a class="site-list__link">Каталог товаров</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="form.html">Вязание на заказ</a>
           </li>
           <li class="site-list__item site-list__item--search">
-            <form class="site-list__item" action="https://echo.htmlacademy.ru" method="post">
-              <label class="site-list__link">Поиск по сайту
-                <input type="text" name="search">
-              </label>
-              <button type="submit"></button>
-            </form>
+            <a class="site-list__link" href="#">Поиск по сайту</a>
           </li>
-          <li class="user-list__item user-list__item--cart">
-            <a class="user-list__link" href="#">Корзина: пока пуста</a>
+          <li class="site-list__item site-list__item--cart">
+            <a class="site-list__link" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <main class="page-main feedback">
-      <h1 class="page-main__title">Каталог товаров</h1>
+      <h1 class="page-main__title page-main__title--inner">Каталог товаров</h1>
 
       <section class="catalog-inner">
         <div class="wrapper">
@@ -97,7 +92,7 @@
     </main>
 
     <footer class="page-footer feedback">
-      <div class="wrapper">
+      <div class="page-footer__wrapper">
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
@@ -114,7 +109,7 @@
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__text">Разработано</span>
-            HTML и CSS, уровень 2
+            <img src="img/htmlacademy.svg" width="27" height="34" alt="HTML и CSS, уровень 2">
           </a>
         </div>
       </div>
