--- a/source/form.html
+++ b/source/form.html
@@ -17,25 +17,20 @@
             <a class="site-list__link" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Вязание на заказ</a>
+            <a class="site-list__link">Вязание на заказ</a>
           </li>
           <li class="site-list__item site-list__item--search">
-            <form class="site-list__item" action="https://echo.htmlacademy.ru" method="post">
-              <label class="site-list__link">Поиск по сайту
-                <input type="text" name="search">
-              </label>
-              <button type="submit"></button>
-            </form>
+            <a class="site-list__link" href="#">Поиск по сайту</a>
           </li>
-          <li class="user-list__item user-list__item--cart">
-            <a class="user-list__link" href="#">Корзина: пока пуста</a>
+          <li class="site-list__item site-list__item--cart">
+            <a class="site-list__link" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <main class="page-main">
-      <h1 class="page-main__title">Вязание на заказ</h1>
+      <h1 class="page-main__title page-main__title--inner">Вязание на заказ</h1>
 
       <section class="order">
         <div class="wrapper">
@@ -117,14 +112,14 @@
             </fieldset>
 
             <span class="">*Поля обязательны для заполнения</span>
-            <button class="" type="submit">Отправить заказ</button>
+            <button class="button" type="submit">Отправить заказ</button>
           </form>
         </div>
       </section>
     </main>
 
     <footer class="page-footer feedback">
-      <div class="wrapper">
+      <div class="page-footer__wrapper">
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
@@ -141,7 +136,7 @@
         <div class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="copyright__text">Разработано</span>
-            HTML и CSS, уровень 2
+            <img src="img/htmlacademy.svg" width="27" height="34" alt="HTML и CSS, уровень 2">
           </a>
         </div>
       </div>
