--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
         <h1 class="page-main__title page-main__title--index">Милые штуки ручной<br> работы для дома</h1>
 
       <section class="catalog">
-        <div class="">
+        <div class="catalog__wrapper">
           <h2 class="visually-hidden">Каталог товаров</h2>
           <ul class="catalog-main">
             <li class="catalog-main__item catalog-main__item--interior">
