--- a/source/form.html
+++ b/source/form.html
@@ -119,7 +119,7 @@
               <textarea name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </fieldset>
 
-            <span class="">*Поля обязательны для заполнения</span>
+            <span class="order__note">*Поля обязательны для заполнения</span>
             <button class="button" type="submit">Отправить заказ</button>
           </form>
         </div>
