--- a/source/catalog.html
+++ b/source/catalog.html
@@ -118,7 +118,7 @@
           <p class="process__description">
             По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
           </p>
-          <a class="process__link button" href="form.html">Сделать заказ</a>
+          <a class="button process__link" href="form.html">Сделать заказ</a>
         </div>
       </section>
     </main>
