--- a/source/index.html
+++ b/source/index.html
@@ -82,7 +82,7 @@
           </table>
           <img class="promo__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Набор вязаных корзинок">
           <p class="promo__price">Цена: 990 руб.</p>
-          <button class="button promo__order" type="button">Заказать</button>
+          <button class="button promo__button" type="button">Заказать</button>
         </div>
       </section>
 
@@ -129,7 +129,7 @@
               <button class="reviews__btn reviews__btn--prev" type="button" aria-label="Предыдущий отзыв"></button>
               <button class="reviews__btn reviews__btn--next" type="button" aria-label="Следующий отзыв"></button>
             </div>
-          <a class="button reviews__write" href="#">Написать</a>
+          <a class="button reviews__link" href="#">Написать</a>
         </div>
       </secton>
 
@@ -150,7 +150,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6193253031113!2d30.32110961617598!3d59.938458669075104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2sBolshaya%20Konyushennaya%20St%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1585331824990!5m2!1sit!2sit"
             width="320" height="457" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </figure>
-          <a class="button contacts__write" href="#">Напишите нам</a>
+          <a class="button contacts__link" href="#">Напишите нам</a>
         </div>
       </section>
     </main>
