Добавление тени к блокам в каталоге

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -107,14 +107,14 @@
       </section>
 
       <section class="process">
-        <div class="process__wrapper">
-          <h3 class="process__title">Процесс производства</h3>
-          <div class="process__video">
-            <video class="" width="260" height="150" poster="img/video-mobile@1x.jpg">
-              <source src="#">
-            </video>
-            <button class="process__button visually-hidden" type="button">Воспроизвести</button>
-          </div>
+        <h3 class="process__title">Процесс производства</h3>
+        <div class="process__video">
+          <video class="" width="260" height="150" poster="img/video-mobile@1x.jpg">
+            <source src="#">
+          </video>
+          <button class="process__button visually-hidden" type="button">Воспроизвести</button>
+        </div>
+        <div class="process__wrap">
           <p class="process__description">
             По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
           </p>
