Корректировка стилизации index, catalog

--- a/source/form.html
+++ b/source/form.html
@@ -38,7 +38,9 @@
     </header>
 
     <main class="page-main">
-      <h1 class="page-main__title page-main__title--inner">Вязание на заказ</h1>
+      <div class="page-main__title-inner">
+        <h1 class="page-main__title">Вязание на заказ</h1>
+      </div>
 
       <section class="order">
         <div class="wrapper">
@@ -127,7 +129,7 @@
     </main>
 
     <footer class="page-footer feedback">
-      <div class="page-footer__wrapper">
+      <div class="wrapper">
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
