--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,67 +38,69 @@
     </header>
 
     <main class="page-main feedback">
-      <h1 class="page-main__title page-main__title--inner">Каталог товаров</h1>
+      <div class="page-main__title-inner">
+        <h1 class="page-main__title">Каталог товаров</h1>
+      </div>
 
       <section class="catalog-inner">
         <div class="wrapper">
           <ul class="catalog-inner__list catalog-list">
             <li class="catalog-list__item">
-              <a class="catalog-list__link--image" href="#">
+              <a class="catalog-list__link" href="#">
                 <img class="catalog-list__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="игрушка 'Вязаный зайчик'">
               </a>
-              <div class="catalog-list__item--desc">
+              <div class="catalog-list__desc">
                 <a class="catalog-list__link" href="#">
-                  <h3 class="catalog-list__name">Зайчик-попрыгайчик</h3>
+                  <h3 class="title-inner catalog-list__name">Зайчик-попрыгайчик</h3>
                 </a>
-                <p class="catalog-list__description">Рост 30 см, вес 200 г</p>
+                <p class="description-inner catalog-list__description">Рост 30 см, вес 200 г</p>
                 <div class="catalog-list__wrap">
                   <span class="catalog-list__price">1 200 руб.</span>
-                  <button class="catalog-list__button" aria-label="Добавить в корзину">
+                  <a class="catalog-list__button" href="add-to-cart.html" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
                       <path d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </div>
             </li>
 
             <li class="catalog-list__item">
-              <a class="catalog-list__link--image" href="#">
+              <a class="catalog-list__link" href="#">
                 <img class="catalog-list__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="вязаная двухцветная корзинка для белья">
               </a>
-              <div class="catalog-list__item--desc">
+              <div class="catalog-list__desc">
                 <a class="catalog-list__link" href="#">
-                  <h3 class="catalog-list__name">Корзинка для белья</h3>
+                  <h3 class="title-inner catalog-list__name">Корзинка для белья</h3>
                 </a>
-                <p class="catalog-list__description">Диаметр 15 см, высота 10 см</p>
+                <p class="description-inner catalog-list__description">Диаметр 15 см, высота 10 см</p>
                 <div class="catalog-list__wrap">
                   <span class="catalog-list__price">690 руб.</span>
-                  <button class="catalog-list__button" aria-label="Добавить в корзину">
+                  <a class="catalog-list__button" href="add-to-cart.html" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
                       <path d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </div>
             </li>
 
             <li class="catalog-list__item">
-              <a class="catalog-list__link--image" href="#">
+              <a class="catalog-list__link" href="#">
                 <img class="catalog-list__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="большая вязаная двухцветная корзинка для игрушек">
               </a>
-              <div class="catalog-list__item--desc">
+              <div class="catalog-list__desc">
                 <a class="catalog-list__link" href="#">
-                  <h3 class="catalog-list__name">Большая корзинка для игрушек</h3>
+                  <h3 class="title-inner catalog-list__name">Большая корзинка для игрушек</h3>
                 </a>
-                <p class="catalog-list__description">Диаметр 30 см, высота 30см</p>
+                <p class="description-inner catalog-list__description">Диаметр 30 см, высота 30см</p>
                 <div class="catalog-list__wrap">
                   <span class="catalog-list__price">1 500 руб.</span>
-                  <button class="catalog-list__button" aria-label="Добавить в корзину">
+                  <a class="catalog-list__button" href="add-to-cart.html" aria-label="Добавить в корзину">
                     <svg class="catalog-list__button--cart" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
                       <path d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </div>
             </li>
@@ -107,7 +109,9 @@
       </section>
 
       <section class="process">
-        <h3 class="process__title">Процесс производства</h3>
+        <div class="process__wrap-title">
+          <h3 class="title-inner process__title">Процесс производства</h3>
+        </div>
         <div class="process__video">
           <video class="" width="260" height="150" poster="img/video-mobile@1x.jpg">
             <source src="#">
@@ -115,7 +119,7 @@
           <button class="process__button visually-hidden" type="button">Воспроизвести</button>
         </div>
         <div class="process__wrap">
-          <p class="process__description">
+          <p class="description-inner process__description">
             По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.
           </p>
           <a class="button process__link" href="form.html">Сделать заказ</a>
@@ -124,7 +128,7 @@
     </main>
 
     <footer class="page-footer feedback">
-      <div class="page-footer__wrapper">
+      <div class="wrapper">
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
