Стилизация index, catalog

--- a/source/index.html
+++ b/source/index.html
@@ -62,13 +62,13 @@
 
       <section class="promo">
         <div class="wrapper">
-          <h2 class="title-main title-main--promo">Вязаные корзинки</h2>
+          <h2 class="title-main">Вязаные корзинки</h2>
           <span class="promo__week title-inner">Товар недели</span>
           <p class="promo__description">
             Экологически чистая пряжа,<br> ручная работа.
             Доступны в шести расцветках и трёх размерах.
           </p>
-          <table class="promo__specif specif-list" cellspacing="0" cellpadding="0">
+          <table class="promo__specif specif-list">
             <tr class="specif-list__item">
               <td class="specif-list__item--name">Цвет:</td>
               <td class="specif-list__item--value">"Тиффани"/серый</td>
