Адаптивные сетки, коррекция разметки

--- a/source/index.html
+++ b/source/index.html
@@ -13,6 +13,7 @@
           <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Логотип интернет-магазина 'Мишка'">
         </a>
         <button class="main-nav__toggle" type="button">меню</button>
+
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a class="site-list__link title-inner" href="catalog.html">Каталог товаров</a>
@@ -20,49 +21,59 @@
           <li class="site-list__item">
             <a class="site-list__link title-inner" href="form.html">Вязание на заказ</a>
           </li>
-          <li class="site-list__item site-list__item--search">
-            <a class="site-list__link title-inner" href="#">
-              <svg class="site-list__link--icon" version="1.1" id="search" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
+        </ul>
+
+        <ul class="main-nav__list user-list">
+          <li class="user-list__item user-list__item--search">
+            <a class="user-list__link title-inner" href="#">
+              <svg class="user-list__link--icon" version="1.1" id="search" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
                 <path d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"/>
               </svg>
-              Поиск по сайту</a>
+              Поиск по сайту
+            </a>
           </li>
-          <li class="site-list__item site-list__item--cart">
-            <a class="site-list__link title-inner" href="#">
-              <svg class="site-list__link--icon" version="1.1" id="cart" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="18px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
+          <li class="user-list__item user-list__item--cart">
+            <a class="user-list__link title-inner" href="#">
+              <svg class="user-list__link--icon" version="1.1" id="cart" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="18px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
                 <path d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
               </svg>
-              Корзина: пока пуста</a>
+              Корзина: пока пуста
+            </a>
           </li>
         </ul>
+
+        <ul class="stock-list">
+          <li class="stock-list__item">
+            <a class="stock-list__link" href="#">Новые поступления</a>
+          </li>
+          <li class="stock-list__item">
+            <a class="stock-list__link" href="#">Распродажа</a>
+          </li>
+        </ul>
+        <p class="main-nav__service">Бесплатная доставка по России</p>
       </nav>
     </header>
 
     <main class="page-main feedback">
-      <div class="page-main__title-wrap">
+      <div class="page-main__title-wrap wrapper">
         <h1 class="page-main__title">Милые штуки ручной<br> работы для дома</h1>
+        <h2 class="visually-hidden">Каталог товаров</h2>
+        <ul class="catalog-main">
+          <li class="catalog-main__item catalog-main__item--interior">
+            <a class="catalog-main__link catalog-main__link--interior" href="#">
+              <h3 class="catalog-main__title">Предметы интерьера</h3>
+            </a>
+          </li>
+          <li class="catalog-main__item catalog-main__item--toys">
+            <a class="catalog-main__link catalog-main__link--toys" href="#">
+              <h3 class="catalog-main__title">Детские игрушки</h3>
+            </a>
+          </li>
+        </ul>
       </div>
 
-      <section class="catalog">
-        <div class="catalog-main__wrapper">
-          <h2 class="visually-hidden">Каталог товаров</h2>
-          <ul class="catalog-main">
-            <li class="catalog-main__item catalog-main__item--interior">
-              <a class="catalog-main__link catalog-main__link--interior" href="#">
-                <h3 class="catalog-main__title">Предметы интерьера</h3>
-              </a>
-            </li>
-            <li class="catalog-main__item catalog-main__item--toys">
-              <a class="catalog-main__link catalog-main__link--toys" href="#">
-                <h3 class="catalog-main__title">Детские игрушки</h3>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
       <section class="promo">
-        <div class="wrapper promo__wrapper">
+        <div class="promo__wrapper wrapper">
           <div class="promo__title-wrap">
             <h2 class="title-main">Вязаные корзинки</h2>
             <span class="promo__week title-inner">Товар недели</span>
@@ -98,26 +109,30 @@
       <section class="advantages">
         <div class="advantages__wrapper wrapper">
           <h2 class="advantages__title title-main">Коротко о нас:</h2>
-          <ul class="advantages__list">
-            <li class="advantages__item advantages__item--ecology">
-              <p>Экологически чистые материалы</p>
-            </li>
-            <li class="advantages__item advantages__item--style">
-              <p>Скандинавский стиль по российской цене</p>
-            </li>
-            <li class="advantages__item advantages__item--like">
-              <p>Увеличивает лайки на фотографиях</p>
-            </li>
-            <li class="advantages__item advantages__item--love">
-              <p>Связано вручную с любовью и умилением</p>
-            </li>
-            <li class="advantages__item advantages__item--support">
-              <p>Поддержка отечественного производителя</p>
-            </li>
-            <li class="advantages__item advantages__item--gift">
-              <p>Поставляется в подарочной упаковке</p>
-            </li>
-          </ul>
+          <div class="advantages__list-wrap">
+            <ul class="advantages__list">
+              <li class="advantages__item advantages__item--ecology">
+                <p>Экологически<br> чистые материалы</p>
+              </li>
+              <li class="advantages__item advantages__item--style">
+                <p>Скандинавский стиль по российской цене</p>
+              </li>
+              <li class="advantages__item advantages__item--like">
+                <p>Увеличивает лайки на фотографиях</p>
+              </li>
+            </ul>
+            <ul class="advantages__list">
+              <li class="advantages__item advantages__item--love">
+                <p>Связано вручную с любовью и умилением</p>
+              </li>
+              <li class="advantages__item advantages__item--support">
+                <p>Поддержка отечественного производителя</p>
+              </li>
+              <li class="advantages__item advantages__item--gift">
+                <p>Поставляется в подарочной упаковке</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
@@ -144,27 +159,26 @@
 
       <section class="contacts">
         <div class="wrapper">
-          <div class="contacts__wrapper">
-            <div class="contacts__block">
-              <h2 class="contacts__title">Контакты</h2>
-              <div class="contacts__wrap contacts__wrap-mail">
-                <span class="contacts__label">e-mail:</span>
-                <a class="contacts__mail--link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-              </div>
-              <div class="contacts__wrap contacts__wrap-address">
-                <span class="contacts__label">адрес:</span>
-                <p class="contacts__address">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</p>
-              </div>
+          <div class="contacts__block">
+            <h2 class="contacts__title">Контакты</h2>
+            <div class="contacts__wrap contacts__wrap-mail">
+              <span class="contacts__label">e-mail:</span>
+              <a class="contacts__mail--link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
             </div>
-
-            <div class="contacts__map">
-              <iframe class="contacts__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.32085871617607!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1587322655043!5m2!1sit!2sit"  height="457" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <div class="contacts__wrap contacts__wrap-address">
+              <span class="contacts__label">адрес:</span>
+              <p class="contacts__address">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</p>
             </div>
           </div>
+        </div>
+
+          <div class="contacts__map">
+            <iframe class="contacts__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.32085871617607!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1587322655043!5m2!1sit!2sit"  height="457" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          </div>
+
           <div class="contacts__link-wrap">
             <a class="button contacts__link" href="#">Напишите нам</a>
           </div>
-        </div>
       </section>
     </main>
 
